--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.3",
-    "express-session": "^1.15.3",
-    "passport": "^0.3.2",
-    "passport-auth0": "^0.6.0"
+    "express-session": "^1.15.3"
   },
   "devDependencies": {},
   "scripts": {
